# arkadia

./: .gitignore  CMakeLists.txt  README.md  config.h.in  font.h  font_oswald.cpp  font_speedwagon.cpp  log.h  main-gpu.cpp  main.cpp  ogl.cpp  ogl.h  oglprogram.cpp  oglprogram.h  oglstats.cpp  oglstats.h  ogltexture.cpp  ogltexture.h
cmake/: FindSDL2.cmake
core-genesis/: CMakeLists.txt
core-genesis/include/: core.h  surface.h
core-genesis/src/: core.cpp
core-genesis/src/genplusgx_source/: loadrom.c
frontend/: arkadia-pad.js  db.yml  filter-crt.frag  filter-crt.vert  filter-default.frag  filter-default.vert  filter-lcd3x.frag  filter-lcd3x.vert  filter-sabr.frag  filter-sabr.vert  index.html  input-system.js  joypad.js  keyboard-pad.js  main.js  package.json
genesis/: CMakeLists.txt
genesis/include/: genesiscore.h
genesis/src/: genesiscore.cpp
hardware/pad/: CMakeLists.txt
hardware/pad/cmake/: Toolchain-xc32.cmake
hardware/pad/src/: app.c  app.h  joystick.h  main.c
hardware/pad/sys/: system_config.h  system_definitions.h  system_init.c  system_interrupt.c
libs/nanovg/: CMakeLists.txt
retro-api/: CMakeLists.txt  core.cpp  core.h  main.cpp  main.js  package.json
roms/genesis/: mjmw.smd
